--- a/themes/default/desktop/style.css
+++ b/themes/default/desktop/style.css
@@ -1,3 +1,9 @@
+@import "css/bootstrap.css";
+@import "css/bootstrap-grid.css";
+@import "css/bootstrap-reboot.css";
+@import "css/bootstrap.min.css";
+
+
 body {
     margin: 0px;
     padding-top: 4px;
