Fixed Default Hours page
Turns out, the bootstrap CSS files never made it to master. But I put them in, and now it looks prettier. Hurray

--- a/admin/adminstyle.css
+++ b/admin/adminstyle.css
@@ -1,3 +1,7 @@
+@import "css/bootstrap-grid.css";
+@import "css/bootstrap-reboot.css";
+@import "css/bootstrap.css";
+
 body {
     margin: 0px;
     padding-top: 4px;
