--- a/themes/default/desktop/style.css
+++ b/themes/default/desktop/style.css
@@ -210,10 +210,15 @@ p {
 #dayviewTable {
     border-collapse: collapse;
     width: 100%;
+    border:1px solid #212121;
 }
 
 #dayviewTable th {
+    border:1px solid #212121;
+}
 
+#dayviewTable td { 
+    border:1px solid #212121;
 }
 
 .dayviewTime {
