experiment with just border bottom
https://screenshotscdn.firefoxusercontent.com/images/36f2da93-608d-42d1-ab61-bd077c85ce01.png

for #15 x

--- a/themes/default/desktop/style.css
+++ b/themes/default/desktop/style.css
@@ -210,15 +210,14 @@ p {
 #dayviewTable {
     border-collapse: collapse;
     width: 100%;
-    border:1px solid #212121;
 }
 
 #dayviewTable th {
-    border:1px solid #212121;
+    border-bottom:1px solid #212121;
 }
 
 #dayviewTable td { 
-    border:1px solid #212121;
+    border-bottom:1px solid #212121;
 }
 
 .dayviewTime {
