WIP work on creating a public reservation page
for #19

Create a simple logo for favicon

https://via.placeholder.com/512x512/607D8B/263238/?text=O

--- a/themes/kushal/assets/sass/hello.css
+++ b/themes/kushal/assets/sass/hello.css
@@ -1,6 +1,5 @@
 body {
-    background-color: #ECEFF1;
-    padding: 2em;
-}
+  background-color: #E0F2F1;
+  padding: 2em; }
 
 /*# sourceMappingURL=hello.css.map */
