--- a/themes/kushal/assets/sass/hello.sass
+++ b/themes/kushal/assets/sass/hello.sass
@@ -1,7 +1,7 @@
 // declare all variables upfront
 // there should be no raw values in the code below
 // prefer material ui colors in default theme
-$background-color: #ECEFF1
+$background-color: #E0F2F1
 
 body
   background-color: $background-color
