add a public index page
so you can go to /public/

http://localhost:8080/public/

[kushal@ideapadflex-kushal openroom]$ npm install -g sass
/home/kushal/.nvm/versions/node/v13.12.0/bin/sass -> /home/kushal/.nvm/versions/node/v13.12.0/lib/node_modules/sass/sass.js
npm WARN optional SKIPPING OPTIONAL DEPENDENCY: fsevents@~2.1.2 (node_modules/sass/node_modules/chokidar/node_modules/fsevents):
npm WARN notsup SKIPPING OPTIONAL DEPENDENCY: Unsupported platform for fsevents@2.1.2: wanted {"os":"darwin","arch":"any"} (current: {"os":"linux","arch":"x64"})

+ sass@1.26.3
added 15 packages from 18 contributors in 2.05s
[kushal@ideapadflex-kushal openroom]$ dnf info sass
Fedora Modular 31 - x86_64 - Updates                                                                                                                   61 kB/s |  16 kB     00:00
Fedora 31 - x86_64 - Updates                                                                                                                           30 kB/s |  12 kB     00:00
Error: No matching Packages to list
[kushal@ideapadflex-kushal openroom]$ dnf search sass
Last metadata expiration check: 0:00:08 ago on Wed 08 Apr 2020 07:18:34 PM MDT.
============================================================================ Name & Summary Matched: sass ============================================================================
rubygem-sassc.x86_64 : Use libsass with Ruby!
libsass-devel.i686 : Development files for libsass
libsass-devel.x86_64 : Development files for libsass
python3-libsass.x86_64 : Python bindings for libsass
libsass.i686 : C/C++ port of the Sass CSS precompiler
libsass.x86_64 : C/C++ port of the Sass CSS precompiler
rubygem-sass-doc.noarch : Documentation for rubygem-sass
rubygem-sassc-doc.noarch : Documentation for rubygem-sassc
sassc.x86_64 : Wrapper around libsass to compile CSS stylesheet
evolution-spamassassin.x86_64 : SpamAssassin plugin for Evolution
rubygem-sass-rails-doc.noarch : Documentation for rubygem-sass

--- a/themes/kushal/assets/sass/hello.sass
+++ b/themes/kushal/assets/sass/hello.sass
@@ -6,3 +6,8 @@ $background-color: #E0F2F1
 body
   background-color: $background-color
   padding: 2em
+
+nav
+  ul
+    list-style-type: none
+    padding: 0
