--- a/themes/kushal/assets/sass/hello.css
+++ b/themes/kushal/assets/sass/hello.css
@@ -2,4 +2,6 @@ body {
   background-color: #E0F2F1;
   padding: 2em; }
 
-/*# sourceMappingURL=hello.css.map */
+nav ul {
+  list-style-type: none;
+  padding: 0; }
